--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-bootstrap": "1.5.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
