--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.1.2",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
