--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
