--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,12 @@
     "ejs": "^2.6.1",
     "expres": "0.0.5",
     "express": "^4.16.3",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.3.0",
     "kafka-node": "^5.0.0",
     "method-override": "^3.0.0",
     "mocha": "^5.2.0",
-    "mongoose": "^5.3.4",
+    "mongoose": "^5.12.2",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
