--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
-    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
-    "popper.js": "^1.16.1",
+    "mdbreact": "^5.0.2",
     "react": "^17.0.1",
-    "react-bootstrap-table": "^4.3.1",
     "react-bootstrap": "^1.5.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
