--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,11 @@
     "mocha": "^5.2.0",
     "mongoose": "^5.12.2",
     "mysql": "^2.16.0",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react-moment": "^0.8.2",
+    "sequelize": "^6.6.2",
     "should": "^13.2.3",
     "supertest": "^3.3.0",
     "validator": "^10.7.1"
