--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,9 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react-moment": "^0.8.2",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.2",
+    "sequelize-redis-cache": "^2.0.1",
     "should": "^13.2.3",
     "supertest": "^3.3.0",
     "validator": "^10.7.1"
