--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "expres": "0.0.5",
     "express": "^4.16.3",
+    "faker": "^5.5.3",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.3.0",
     "kafka-node": "^5.0.0",
