--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -9,10 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "faker": "^5.5.3",
     "fs": "0.0.1-security",
     "kafka-node": "^5.0.0",
     "mongoose": "^5.12.6",
     "multer": "^1.4.2",
-    "redis": "^2.8.0"
+    "mysql": "^2.16.0",
+    "mysql2": "^2.2.5",
+    "redis": "^2.8.0",
+    "sequelize": "^6.6.2",
+    "sequelize-redis-cache": "^2.0.1"
   }
 }
