--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.5.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
+    "react-dropdown-select": "^4.7.4",
     "react-paginate": "^7.1.2",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
