--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.2.1",
     "classnames": "^2.2.6",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "mdbreact": "^5.0.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^3.0.3",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-dropdown-select": "^4.7.4",
