--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@livechat/ui-kit": "^0.4.0-10",
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.9",
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
     "chart.js": "^3.2.1",
     "classnames": "^2.2.6",
     "jquery": "^3.6.0",
