--- a/backend/package.json
+++ b/backend/package.json
@@ -30,10 +30,12 @@
     "method-override": "^3.0.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.12.2",
+    "multer": "^1.4.2",
     "mysql": "^2.16.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "react-moment": "^0.8.2",
     "redis": "^3.1.2",
     "sequelize": "^6.6.2",
